<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.bangkit.allergysense.ui.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navAllergy"
        android:name="com.bangkit.allergysense.ui.fragments.allergy.AllergyFragment"
        android:label="@string/allergy"
        tools:layout="@layout/fragment_allergy"/>

    <fragment
        android:id="@+id/navProfile"
        android:name="com.bangkit.allergysense.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navSetting"
        android:name="com.bangkit.allergysense.ui.fragments.settings.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_profile"/>

</navigation>