<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profile.ProfileFragment"
    android:background="?attr/bg">

<!--  picture  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/profile_blank"
            android:contentDescription="@string/iv_profile" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/field_edit"
                android:contentDescription="@string/button_edit"/>

            <ImageView
                android:id="@+id/edit"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/edit_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--  name  -->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="?attr/boldText"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_medium"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="?attr/boldText"
        android:text="@string/email"/>

    <!--  Field 1   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iconpolicy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/list_left"
                android:contentDescription="@string/icon" />

            <TextView
                android:id="@+id/tvPolicy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconpolicy"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="?attr/boldText"
                android:text="@string/policy"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/line_5"
            android:contentDescription="@string/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  Field 2   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/f2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/f1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iconlogout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/sign_out_circle_light"
                android:contentDescription="@string/icon" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconlogout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="?attr/boldText"
                android:text="@string/logout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/line_5"
            android:contentDescription="@string/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:progressBarStyle"
        android:indeterminate="true"
        app:indicatorSize="60dp"
        app:trackThickness="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>