<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.TermsActivity"
    android:background="?attr/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/termscondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/backarrow"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/product_sans_bold"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="?attr/boldText"
            android:text="@string/terms"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--  content  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/icon"/>

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/product_sans_bold"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="?attr/boldText"
                    android:textAlignment="center"
                    android:text="@string/app_name"/>

                <TextView
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/appName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/boldText"
                    android:text="@string/agreement_to_our_legal_terms"/>

                <TextView
                    android:id="@+id/termsIsian2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/agree"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/product_sans_regular"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:textColor="?attr/boldText"
                    android:justificationMode="inter_word"
                    android:text="@string/isianTerms"
                    tools:targetApi="o" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:progressBarStyle"
        android:indeterminate="true"
        app:indicatorSize="60dp"
        app:trackThickness="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>